# crypter-rs

./: README.md
.github/workflows/: rust.yml
file_crypter/: Cargo.toml
file_crypter/src/: lib.rs
sample_application/: Cargo.toml
sample_application/src/: main.rs
